mvn structure fixed